--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ node/node_modules
 src/main/webapp/luggage-calculator-app/node_modules
 src/main/webapp/luggage-calculator-app/node
 node/node.exe
+src/main/webapp/luggage-calculator-app/node/node.exe
