--- a/src/main/webapp/luggage-calculator-app/package.json
+++ b/src/main/webapp/luggage-calculator-app/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^3.4.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
