--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.servlet.context-path=/payara
-server.port=9999
-#logging.level.org.springframework=DEBUG
+server.port=8443
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=ThumperWasAFantasticDog1967
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=tomcat
